--- a/src/app/check-list-item/check-list-item.component.scss
+++ b/src/app/check-list-item/check-list-item.component.scss
@@ -2,25 +2,26 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin: 8px 0px 8px 0px;
   border: 1px solid lightgray;
-  padding:12px;
+  padding: 12px;
+
+  &_complete {
+    border: 1px solid green;
+  }
 
   &__title {
     font-size: 24px;
-    color: black;
-    display: flex;
-    align-items: center;
+    margin-bottom: 2%;
   }
 
   &__actions {
     display: flex;
     flex-direction: row;
-    align-items: center;
   }
   &__btn {
-    font-size:16px;
+    font-size: 16px;
     margin-left: 8px;
     border: none;
     background-color: transparent;
@@ -31,7 +32,7 @@
     &_remove {
       color: red;
     }
-    &:hover{
+    &:hover {
       opacity: 0.6;
     }
   }
