--- a/src/app/check-list-item/check-list-item.component.html
+++ b/src/app/check-list-item/check-list-item.component.html
@@ -1,4 +1,22 @@
 <div class="wrapper">
+  <div class="header">
+    <div class="header__counter">
+      <p class="header__text">ALL {{ checkList.length }}</p>
+      <p class="header__text header__text_complete">
+        COMPLETED {{ completeCounter }}
+      </p>
+    </div>
+    <div class="header__actions">
+      <button class="btn header__clearAll" (click)="clearAll()">
+        <svg xmlns="http://www.w3.org/2000/svg" height="20" width="20">
+          <path
+            d="M6.5 17q-.625 0-1.062-.438Q5 16.125 5 15.5v-10H4V4h4V3h4v1h4v1.5h-1v10q0 .625-.438 1.062Q14.125 17 13.5 17Zm7-11.5h-7v10h7ZM8 14h1.5V7H8Zm2.5 0H12V7h-1.5Zm-4-8.5v10Z"
+          /></svg
+        >Clear All Tasks
+      </button>
+    </div>
+  </div>
+
   <div
     class="check-card"
     *ngFor="let checkListItem of checkList; let idx = index"
